mavenpr/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-deployment
  namespace: dev-madhavan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-app
  template:
    metadata:
      labels:
        app: springboot-app
    spec:
      containers:
        - name: springboot-container
          image: madhavan0702/mavenpr:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 200m
