mavenpr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
  namespace: dev-madhavan
spec:
  type: NodePort
  selector:
    app: springboot-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30045
