mavenpr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: dev-madhavan
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / # optional if paths need rewrite
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /springboot
        pathType: Prefix
        backend:
          service:
            name: sp-app
            port:
              number: 80
      - path: /react
        pathType: Prefix
        backend:
          service:
            name: react-service
            port:
              number: 3000
